; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_intr.c_isrc_setup_counters.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_intr.c_isrc_setup_counters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i64, i32* }

@intrcnt_index = common dso_local global i32 0, align 4
@intrcnt = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intr_irqsrc*)* @isrc_setup_counters to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isrc_setup_counters(%struct.intr_irqsrc* %0) #0 {
  %2 = alloca %struct.intr_irqsrc*, align 8
  %3 = alloca i64, align 8
  store %struct.intr_irqsrc* %0, %struct.intr_irqsrc** %2, align 8
  %4 = call i64 @atomic_fetchadd_int(i32* @intrcnt_index, i32 2)
  store i64 %4, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %2, align 8
  %7 = getelementptr inbounds %struct.intr_irqsrc, %struct.intr_irqsrc* %6, i32 0, i32 0
  store i64 %5, i64* %7, align 8
  %8 = load i32*, i32** @intrcnt, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  %11 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %2, align 8
  %12 = getelementptr inbounds %struct.intr_irqsrc, %struct.intr_irqsrc* %11, i32 0, i32 1
  store i32* %10, i32** %12, align 8
  %13 = load %struct.intr_irqsrc*, %struct.intr_irqsrc** %2, align 8
  %14 = call i32 @isrc_update_name(%struct.intr_irqsrc* %13, i32* null)
  ret void
}

declare dso_local i64 @atomic_fetchadd_int(i32*, i32) #1

declare dso_local i32 @isrc_update_name(%struct.intr_irqsrc*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
